# sonar-game-engine

./: CMakeLists.txt  Ceiling.cpp  Ceiling.h  Entities.cpp  Entities.h  Entity.cpp  Entity.h  Floor.cpp  Floor.h  Map.cpp  Map.h  MapTile.cpp  MapTile.h  Player.cpp  Player.h  Raycaster.cpp  Raycaster.h  Resolution.cpp  Resolution.h  Textures.cpp  Textures.h  Wall.cpp  Wall.h  Window.cpp  Window.h  ceiling.h  cieling.cpp  entities.cpp  entities.h  entity.cpp  entity.h  floor.cpp  floor.h  main.cpp  map.cpp  map.h  player.cpp  player.h  raycaster.cpp  raycaster.h  (+8 more)
assets/maps/: test.sgm
assets/maps/map-converter/: convert.php  test.ceilingplan  test.floorplan  textures.xml
